--- a/rollup/core/classes/RollupRepository.cls
+++ b/rollup/core/classes/RollupRepository.cls
@@ -161,7 +161,9 @@ public without sharing class RollupRepository implements RollupLogger.ToStringOb
       meta.LookupObject__c = meta.LookupObjectText__c ?? meta.LookupObject__r.QualifiedApiName;
       meta.RollupFieldOnCalcItem__c = meta.RollupFieldOnCalcItemText__c ?? meta.RollupFieldOnCalcItem__r.QualifiedApiName;
       meta.RollupFieldOnLookupObject__c = meta.RollupFieldOnLookupObjectText__c ?? meta.RollupFieldOnLookupObject__r.QualifiedApiName;
-      meta.UltimateParentLookup__c = meta.UltimateParentLookupText__c ?? meta.UltimateParentLookup__r.QualifiedApiName;
+      meta.UltimateParentLookup__c = meta.RollupToUltimateParent__c
+        ? meta.UltimateParentLookupText__c ?? meta.UltimateParentLookup__r.QualifiedApiName
+        : null;
 
       meta.GroupByRowEndDelimiter__c = meta.GroupByRowEndDelimiter__c?.unescapeJava();
       meta.GroupByRowStartDelimiter__c = meta.GroupByRowStartDelimiter__c?.unescapeJava();
